@@ -36,6 +36,9 @@
    - djm@cvs.openbsd.org 2008/04/18 22:01:33
      [session.c]
      remove unneccessary parentheses
+   - otto@cvs.openbsd.org 2008/04/29 11:20:31
+     [monitor_mm.h]
+     garbage collect two unused fields in struct mm_master; ok markus@
 
 20080403
  - (djm) [openbsd-compat/bsd-poll.c] Include stdlib.h to avoid compile-
@@ -3896,4 +3899,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4913 2008/05/19 04:55:02 djm Exp $
+$Id: ChangeLog,v 1.4914 2008/05/19 04:55:29 djm Exp $
